Refactoring and warnings clean-up